# selenium-apps

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
src/pyproject/: __init__.py
src/seleniumapps/: __init__.py
tests/: test_pyproject.py
