[tool.poetry]
name = "pyproject"
version = "2021.3.0.dev0"
description = "A template for your Python project. It uses Poetry as a dependency manager and Apache 2.0 as its license."
license = "Apache-2.0"
authors = [
  "Omar Abel Rodríguez-López <oarodriguez.mx@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/oarodriguez/python-project"
repository = "https://github.com/oarodriguez/python-project"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Version Control :: Git",
]

packages = [
  { include = "pyproject", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = ">=8.0.1"
attrs = ">=20.3.0"
importlib-metadata = { version = ">=3.3.0", python = "<3.8" }
jupyter = { version = ">=1.0.0", optional = true }
jupyterlab = { version = ">=3.0.12", optional = true }
jupyterlab-code-formatter = { version = ">=1.4.5", optional = true }
jupytext = { version = ">=1.11.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"
black = ">=20.8b1"
isort = ">=5.8.0"
flake8 = ">=3.9.0"
mypy = ">=0.812"
pydocstyle = ">=6.0.0"
Sphinx = ">=3.5.4"
sphinx-rtd-theme = ">=0.5.2"
hypothesis = ">=6.10.1"
coverage = ">=5.5"
pytest-cov = ">=2.12.0"
pre-commit = ">=2.13.0"
rope = ">=0.19.0"

[tool.poetry.extras]
jupyter = ["jupyter", "jupyterlab", "jupyterlab-code-formatter", "jupytext"]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
src_paths = ["src"]

[tool.pydocstyle]
# Include all files, even tests.
match = ".*\\.py"

[tool.pytest.ini_options]
addopts = "-s -vv -ra"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
parallel = true
branch = true
source = ["pyproject"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
